test/nexj/invalidbase/components/KeyGenerator.GUIDGen.comp
<Component type="java.lang.Object" activation="singleton" description="GUID key generator"/>
